--- a/webssh/templates/index.html
+++ b/webssh/templates/index.html
@@ -32,11 +32,11 @@
         <div class="row">
           <div class="col">
             <label for="Hostname">Hostname</label>
-            <input class="form-control" type="text" id="hostname" name="hostname" value="" required>
+            <input class="form-control" type="text" id="hostname" name="hostname" value="192.168.2.168" readonly required>
           </div>
           <div class="col">
             <label for="Port">Port</label>
-            <input class="form-control" type="number" id="port" name="port" placeholder="22" value="" min=1 max=65535>
+            <input class="form-control" type="number" id="port" name="port" placeholder="22" value="22" readonly min=1 max=65535>
           </div>
         </div>
         <div class="row">
